--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ button:focus-visible {
   right: 0;
   width: 100%;
   height: fit-content;
-  background: url('./auth-background.png');
+  background: url('/auth-background.png');
   background-position: left 600% center;
   background-repeat: no-repeat;
 }
